@@ -1030,27 +1030,28 @@ void destroynotify(XEvent *e) {
     client *c;
     XDestroyWindowEvent *ev = &e->xdestroywindow;
 
-    if(transient != NULL) {
-        for(c=transient;c;c=c->next)
-            if(ev->window == c->win) {
-                remove_client(c, 0, 1);
-                update_current();
-                return;
-            }
-    }
     save_desktop(tmp);
-    for(i=0;i<DESKTOPS;++i) {
-        select_desktop(i);
+    for(i=tmp;i<tmp+DESKTOPS;++i) {
+        select_desktop(i%DESKTOPS);
         for(c=head;c;c=c->next)
             if(ev->window == c->win) {
                 remove_client(c, 0, 0);
-                select_desktop(tmp);
-                update_current();
                 if(STATUS_BAR == 0) update_bar();
+                foundit = 1;
                 break;
             }
+        if(transient != NULL) {
+            for(c=transient;c;c=c->next)
+                if(ev->window == c->win) {
+                    remove_client(c, 0, 1);
+                    foundit = 1;
+                    break;
+                }
+        }
+        if(foundit == 1) break;
     }
     select_desktop(tmp);
+    update_current();
 }
 
 void enternotify(XEvent *e) {
